Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10212

operation ost_read to node [*] failed: rc = -116

XMLWordPrintable

    • 3
    • 9223372036854775807

      1504054839 2017 Aug 30 03:00:39 m10029 kern info kernel Lustre: 
      lustre02-MDT0005-mdc-ffff880079922000: Connection restored to 
      10.50.33.92@o2ib (at 10.50.33.92@o2ib)
      1504063447 2017 Aug 30 05:24:07 m10029 kern err kernel LustreError: 
      11-0: lustre01-OST0023-osc-ffff88085f97b000: operation ost_read to node 
      10.50.32.72@o2ib failed: rc = -116

      Based on logs, there were identical locks from the client. And the client canceled one of them because of two, and sent io. The read request came to server with lock handle which was canceled. And the prolong function didn`t check the resource lock tree for this case. So client got ESTALE error.

            aboyko Alexander Boyko
            aboyko Alexander Boyko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: